# brandnamer

./: README.md  pyproject.toml
brandnamer/: __init__.py  cli.py  engine.py  rules.py
brandnamer/providers/: __init__.py  gemini.py  ollama.py  openai.py
examples/: fintech_app.json  travel_app.json
neologix/: __init__.py  cli.py
neologix/providers/: anthropic.py
